# csui-csge602022-tutorial-0-2023

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  test.yml
main/: forms.py  models.py  tests.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_product_user.py
main/static/main/: tutorial.css
main/templates/: 404.html  create_product.html  edit_product.html  login.html  main.html  register.html
shopping_list/: settings.py  urls.py
templates/: base.html
